User get controller
