# services/backend-kotlin/core-stuff/src/main/kotlin/com/tsypk/corestuff/controller/dto/UserDto.kt
@@ -1,0 +1,12 @@
+package com.tsypk.corestuff.controller.dto
+
+import com.fasterxml.jackson.annotation.JsonProperty
+
+data class UserDto(
+    @JsonProperty("id")
+    val id: Long,
+    @JsonProperty("username")
+    val username: String,
+    @JsonProperty("role")
+    val role: String,
+)
