# spec/api.yaml
@@ -165,6 +165,22 @@ paths:
             application/json:
               schema: { }
 
+  /v1/user/get:
+    get:
+      description: |
+        Request to get user
+      tags:
+        - User
+      parameters:
+        - $ref: '#/components/parameters/UserIdHeader'
+      responses:
+        '200':
+          description: |
+            Request processed successfully, body contains user
+          content:
+            application/json:
+              schema:
+                '$ref': '#/components/schemas/UserDto'
 
 
 components:
@@ -414,6 +430,20 @@ components:
         - password
         - role
 
+    UserDto:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+        username:
+          type: string
+        role:
+          type: string
+      required:
+        - id
+        - username
+        - role
 
 
   parameters:
